# Robotic-Arm-Simulation

./: .gitignore  README.md
src/arm_description/: CMakeLists.txt  package.xml
src/arm_description/config/: arm_controllers.yaml  rviz_config.rviz
src/arm_description/launch/: display.launch.py  gazebo.launch.py
src/arm_description/scripts/: arm_controller.py
src/arm_description/urdf/: arm.urdf.xacro
