<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>arm_description</name>
    <version>0.1.0</version>
    <description>4-DOF robotic arm description, simulation and control</description>
    <maintainer email="you@example.com">Your Name</maintainer>
    <license>Apache-2.0</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>rclpy</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>trajectory_msgs</depend>
    <depend>robot_state_publisher</depend>
    <depend>joint_state_publisher</depend>
    <depend>joint_state_publisher_gui</depend>
    <depend>xacro</depend>
    <depend>gazebo_ros</depend>
    <depend>gazebo_ros2_control</depend>
    <depend>ros2_control</depend>
    <depend>ros2_controllers</depend>
    <depend>controller_manager</depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>